--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -263,9 +263,14 @@
             <div class="bg-white rounded-xl shadow-lg p-6">
                 <div class="flex items-center justify-between mb-6">
                     <h3 class="text-xl font-semibold text-gray-800">Research Funding Trends</h3>
-                    <button class="text-blue-600 hover:text-blue-800 transition-colors">
-                        <i class="fas fa-expand-alt"></i>
-                    </button>
+                    <div class="flex space-x-2">
+                        <button onclick="testFundingChart()" class="text-blue-600 hover:text-blue-800 transition-colors text-sm">
+                            <i class="fas fa-sync-alt"></i> Test
+                        </button>
+                        <button class="text-blue-600 hover:text-blue-800 transition-colors">
+                            <i class="fas fa-expand-alt"></i>
+                        </button>
+                    </div>
                 </div>
                 <div id="funding-chart"></div>
             </div>
@@ -274,9 +279,14 @@
             <div class="bg-white rounded-xl shadow-lg p-6">
                 <div class="flex items-center justify-between mb-6">
                     <h3 class="text-xl font-semibold text-gray-800">Publications by Department</h3>
-                    <button class="text-blue-600 hover:text-blue-800 transition-colors">
-                        <i class="fas fa-expand-alt"></i>
-                    </button>
+                    <div class="flex space-x-2">
+                        <button onclick="testPublicationsChart()" class="text-blue-600 hover:text-blue-800 transition-colors text-sm">
+                            <i class="fas fa-sync-alt"></i> Test
+                        </button>
+                        <button class="text-blue-600 hover:text-blue-800 transition-colors">
+                            <i class="fas fa-expand-alt"></i>
+                        </button>
+                    </div>
                 </div>
                 <div id="publications-chart"></div>
             </div>
@@ -288,9 +298,14 @@
             <div class="xl:col-span-2 bg-white rounded-xl shadow-lg p-6">
                 <div class="flex items-center justify-between mb-6">
                     <h3 class="text-xl font-semibold text-gray-800">Recent Research Projects</h3>
-                    <a href="pages/projects.html" class="text-blue-600 hover:text-blue-800 transition-colors text-sm font-medium">
-                        View All <i class="fas fa-arrow-right ml-1"></i>
-                    </a>
+                    <div class="flex space-x-2">
+                        <button onclick="testRecentProjects()" class="text-blue-600 hover:text-blue-800 transition-colors text-sm">
+                            <i class="fas fa-sync-alt"></i> Test
+                        </button>
+                        <a href="pages/projects.html" class="text-blue-600 hover:text-blue-800 transition-colors text-sm font-medium">
+                            View All <i class="fas fa-arrow-right ml-1"></i>
+                        </a>
+                    </div>
                 </div>
                 <div id="recent-projects" class="space-y-4">
                     <!-- Projects will be loaded here -->
@@ -301,9 +316,14 @@
             <div class="bg-white rounded-xl shadow-lg p-6">
                 <div class="flex items-center justify-between mb-6">
                     <h3 class="text-xl font-semibold text-gray-800">Top Researchers</h3>
-                    <a href="pages/faculty.html" class="text-blue-600 hover:text-blue-800 transition-colors text-sm font-medium">
-                        View All <i class="fas fa-arrow-right ml-1"></i>
-                    </a>
+                    <div class="flex space-x-2">
+                        <button onclick="testTopResearchers()" class="text-blue-600 hover:text-blue-800 transition-colors text-sm">
+                            <i class="fas fa-sync-alt"></i> Test
+                        </button>
+                        <a href="pages/faculty.html" class="text-blue-600 hover:text-blue-800 transition-colors text-sm font-medium">
+                            View All <i class="fas fa-arrow-right ml-1"></i>
+                        </a>
+                    </div>
                 </div>
                 <div id="top-researchers" class="space-y-4">
                     <!-- Researchers will be loaded here -->
@@ -576,6 +596,14 @@
     #back-to-top.show {
         opacity: 1;
         visibility: visible;
+    }
+    
+    /* Line clamp utility for text truncation */
+    .line-clamp-2 {
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
     }
     </style>
 
