--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -9,7 +9,8 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/styles.css">
     <!-- FontAwesome Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- <link href="https://site-assets.fontawesome.com/releases/v6.4.0/css/all.css" rel="stylesheet"> -->
+    <link href="https://site-assets.fontawesome.com/releases/v6.4.0/css/all.css" rel="stylesheet">
     <!-- ApexCharts for data visualization -->
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 </head>
@@ -25,7 +26,7 @@
                     </div>
                     <div>
                         <a href="index.html" class="text-xl font-bold hover:text-blue-200 transition-colors">
-                            University Research Portal
+                            CSEDU Research Portal
                         </a>
                         <p class="text-xs text-blue-200">Academic Excellence & Innovation</p>
                     </div>
@@ -166,7 +167,7 @@
     <section class="bg-gradient-to-r from-blue-800 to-indigo-900 text-white py-16">
         <div class="container mx-auto px-4 text-center">
             <h1 class="text-4xl md:text-6xl font-bold mb-6">
-                University Research Portal
+                CSEDU Research Portal
             </h1>
             <p class="text-xl md:text-2xl mb-8 text-blue-200">
                 Advancing Knowledge Through Collaborative Research & Innovation
@@ -420,7 +421,7 @@
                         <div class="bg-blue-600 rounded-full p-2">
                             <i class="fas fa-university text-white"></i>
                         </div>
-                        <h3 class="text-xl font-bold">University Research Portal</h3>
+                        <h3 class="text-xl font-bold">CSEDU Research Portal</h3>
                     </div>
                     <p class="text-gray-300 text-sm leading-relaxed">
                         Advancing knowledge through collaborative research, innovation, and academic excellence. 
@@ -517,23 +518,19 @@
                             <i class="fas fa-map-marker-alt text-blue-400 mt-1"></i>
                             <div>
                                 <p class="text-gray-300 text-sm">
-                                    123 University Avenue<br>
-                                    Research Building, Floor 3<br>
-                                    Academic City, AC 12345
+                                    Department of Computer Science and Engineering<br>
+                                    New Science Complex Building<br>
+                                    University of Dhaka, Dhaka-1000, Bangladesh
                                 </p>
                             </div>
                         </div>
                         <div class="flex items-center space-x-3">
                             <i class="fas fa-phone text-blue-400"></i>
-                            <p class="text-gray-300 text-sm">+1 (555) 123-4567</p>
+                            <p class="text-gray-300 text-sm">+88 02 226683029</p>
                         </div>
                         <div class="flex items-center space-x-3">
                             <i class="fas fa-envelope text-blue-400"></i>
-                            <p class="text-gray-300 text-sm">research@university.edu</p>
-                        </div>
-                        <div class="flex items-center space-x-3">
-                            <i class="fas fa-clock text-blue-400"></i>
-                            <p class="text-gray-300 text-sm">Mon - Fri: 8:00 AM - 6:00 PM</p>
+                            <p class="text-gray-300 text-sm">research@cse.du.ac.bd</p>
                         </div>
                     </div>
                 </div>
@@ -543,7 +540,7 @@
             <div class="border-t border-gray-700 mt-8 pt-8">
                 <div class="flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0">
                     <div class="text-gray-400 text-sm">
-                        © 2024 University Research Portal. All rights reserved.
+                        © 2025 CSEDU Research Portal. All rights reserved.
                     </div>
                     <div class="flex flex-wrap justify-center md:justify-end space-x-6 text-sm">
                         <a href="#" class="text-gray-400 hover:text-white transition-colors">Privacy Policy</a>
